feat(notif): Sorts list of notifications by pubdate and order in asc or desc.
1. Creates SortMixin in utils/mixins.py file to have a generic mixin.
2. Uses SortMixin in NotificationListView and configure it.
3. Adds all test cases about the sort.

Closes #12

--- a/templates/notification/base.html
+++ b/templates/notification/base.html
@@ -29,6 +29,6 @@
 
 {% block sidebar %}
     <aside class="sidebar mobile-menu-hide">
-
+        {% block sidebar_blocks %}{% endblock %}
     </aside>
 {% endblock %}
