Custom signals correction and signals factorisation

--- a/templates/email/notification/articleanswersubscription.html
+++ b/templates/email/notification/articleanswersubscription.html
@@ -4,7 +4,7 @@
 
 {% block content_from_staff %}
     <p>
-        <strong>{{ author }}</strong> {% trans "a créé un nouveau sujet : " %} "{{ title }}" {% trans "sur" %} {{ site_name }}.
+        <strong>{{ author }}</strong> {% trans "a répondu aux commentaires de l'article" %} "{{ title }}" {% trans "que vous suivez sur" %} {{ site_name }}.
     </p>
 
     <p>
