refactor(forum): Follows new topics of a forum.
1. Fixes the render of the button in the sidebar to follow a forum.
2. Refactors the function view to edit notification for a CBV view
in notification module.
3. Adds some tests.

--- a/templates/forum/find/topic_by_tag.html
+++ b/templates/forum/find/topic_by_tag.html
@@ -22,7 +22,7 @@
 
 {% block sidebar_actions %}
     <li>
-        <form action="{% url "zds.forum.views.edit_notification_forum" %}" method="post">
+        <form action="{% url 'follow-tag-edit' %}" method="post">
             <input type="hidden" name="tag" value="{{ tag.pk }}">
             <input type="hidden" name="follow" value="{% if tag|has_subscribed_new %}-1{% else %}1{% endif %}">
             {% csrf_token %}
