--- a/templates/forum/category/forum.html
+++ b/templates/forum/category/forum.html
@@ -73,28 +73,30 @@
 
 {% block sidebar_actions %}
     <li>
-        <form action="{% url "zds.forum.views.edit_notification_forum" %}" method="post">
+        <form action="{% url 'follow-forum-edit' %}" method="post">
+        {% with has_subscribed_new=forum|has_subscribed_new_topic %}
             <input type="hidden" name="forum" value="{{ forum.pk }}">
-            <input type="hidden" name="follow" value="{% if forum|has_subscribed_new %}-1{% else %}1{% endif %}">
+            <input type="hidden" name="follow" value="{% if has_subscribed_new %}-1{% else %}1{% endif %}">
             {% csrf_token %}
 
             <button
-                class="follow ico-after star {% if forum|has_subscribed_new %}yellow{% else %}blue{% endif %}"
+                class="follow ico-after star {% if has_subscribed_new %}yellow{% else %}blue{% endif %}"
                 type="submit" data-ajax-input="follow-forum"
                 data-content-on-click="
-                    {% if forum|has_subscribed_new %}
+                    {% if has_subscribed_new %}
                         {% trans "Suivre ce forum" %}
                     {% else %}
                         {% trans "Ne plus suivre ce forum" %}
                     {% endif %}
                 "
             >
-                {% if forum|has_subscribed_new %}
+                {% if has_subscribed_new %}
                     {% trans "Ne plus suivre ce forum" %}
                 {% else %}
                     {% trans "Suivre ce forum" %}
                 {% endif %}
             </button>
+        {% endwith %}
         </form>
     </li>
 {% endblock %}
