--- a/templates/forum/category/forum.html
+++ b/templates/forum/category/forum.html
@@ -99,6 +99,33 @@
         {% endwith %}
         </form>
     </li>
+    <li>
+        <form action="{% url 'follow-forum-edit' %}" method="post">
+        {% with has_subscribed_new=forum|has_suscribed_email_new_topic %}
+            <input type="hidden" name="forum" value="{{ forum.pk }}">
+            <input type="hidden" name="email" value="{% if has_subscribed_new %}-1{% else %}1{% endif %}">
+            {% csrf_token %}
+
+            <button
+                class="email ico-after {% if not has_subscribed_new %}blue{% endif %}"
+                type="submit" data-ajax-input="follow-forum-by-email"
+                data-content-on-click="
+                    {% if has_subscribed_new %}
+                        {% trans "Être notifié par courriel" %}
+                    {% else %}
+                        {% trans "Ne plus être notifié par courriel" %}
+                    {% endif %}
+                "
+            >
+                {% if has_subscribed_new %}
+                    {% trans "Ne plus être notifié par courriel" %}
+                {% else %}
+                    {% trans "Être notifié par courriel" %}
+                {% endif %}
+            </button>
+        {% endwith %}
+        </form>
+    </li>
 {% endblock %}
 
 
