--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -173,25 +173,26 @@
     {% endif %}
 
     <li>
-        <form action="{% url 'topic-edit' %}" method="post">
+    {% with subscribe_array=topic|has_subscribed_answer_topic %}
+        <form action="{% url 'follow-topic-edit' %}" method="post">
             <input type="hidden" name="topic" value="{{ topic.pk }}">
             <input type="hidden" name="nb" value="{{ nb }}">
             <input type="hidden" name="page" value="{{ nb }}">
-            <input type="hidden" name="follow" value="{% if topic|has_subscribed_new %}-1{% else %}1{% endif %}">
+            <input type="hidden" name="follow" value="{% if subscribe_array.has_subscribed_answer %}-1{% else %}1{% endif %}">
             {% csrf_token %}
 
             <button
-                class="follow ico-after star {% if topic|has_subscribed_new %}yellow{% else %}blue{% endif %}"
+                class="follow ico-after star {% if subscribe_array.has_subscribed_answer %}yellow{% else %}blue{% endif %}"
                 type="submit" data-ajax-input="follow-topic"
                 data-content-on-click="
-                    {% if topic|has_subscribed_new %}
+                    {% if subscribe_array.has_subscribed_answer %}
                         {% trans "Suivre ce sujet" %}
                     {% else %}
                         {% trans "Ne plus suivre ce sujet" %}
                     {% endif %}
                 "
             >
-                {% if topic|has_subscribed_new %}
+                {% if subscribe_array.has_subscribed_answer %}
                     {% trans "Ne plus suivre ce sujet" %}
                 {% else %}
                     {% trans "Suivre ce sujet" %}
@@ -200,31 +201,32 @@
         </form>
     </li>
     <li>
-        <form action="{% url 'topic-edit' %}" method="post">
+        <form action="{% url 'follow-topic-edit' %}" method="post">
             <input type="hidden" name="topic" value="{{ topic.pk }}">
             <input type="hidden" name="nb" value="{{ nb }}">
             <input type="hidden" name="page" value="{{ nb }}">
-            <input type="hidden" name="email" value="1">
+            <input type="hidden" name="email" value="{% if subscribe_array.has_subscribed_answer_email %}-1{% else %}1{% endif %}">
             {% csrf_token %}
 
             <button
-                class="email ico-after {% if not topic|has_suscribed_email_new %}blue{% endif %}"
+                class="email ico-after {% if not subscribe_array.has_subscribed_answer_email %}blue{% endif %}"
                 type="submit" data-ajax-input="follow-topic-by-email"
                 data-content-on-click="
-                    {% if topic|has_suscribed_email_new %}
+                    {% if subscribe_array.has_subscribed_answer_email %}
                         {% trans "Être notifié par courriel" %}
                     {% else %}
                         {% trans "Ne plus être notifié par courriel" %}
                     {% endif %}
                 "
             >
-                {% if topic|has_suscribed_email_new %}
+                {% if subscribe_array.has_subscribed_answer_email %}
                     {% trans "Ne plus être notifié par courriel" %}
                 {% else %}
                     {% trans "Être notifié par courriel" %}
                 {% endif %}
             </button>
         </form>
+    {% endwith %}
     </li>
 {% endblock %}
 
