--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -174,25 +174,25 @@
 
     <li>
         <form action="{% url 'follow-topic-edit' %}" method="post">
-        {% with has_subscribed_new=topic|has_subscribed_new %}
+        {% with has_subscribed_answer=topic|has_subscribed_answer_topic %}
             <input type="hidden" name="topic" value="{{ topic.pk }}">
             <input type="hidden" name="nb" value="{{ nb }}">
             <input type="hidden" name="page" value="{{ nb }}">
-            <input type="hidden" name="follow" value="{% if has_subscribed_new %}-1{% else %}1{% endif %}">
+            <input type="hidden" name="follow" value="{% if has_subscribed_answer %}-1{% else %}1{% endif %}">
             {% csrf_token %}
 
             <button
-                class="follow ico-after star {% if has_subscribed_new %}yellow{% else %}blue{% endif %}"
+                class="follow ico-after star {% if has_subscribed_answer %}yellow{% else %}blue{% endif %}"
                 type="submit" data-ajax-input="follow-topic"
                 data-content-on-click="
-                    {% if has_subscribed_new %}
+                    {% if has_subscribed_answer %}
                         {% trans "Suivre ce sujet" %}
                     {% else %}
                         {% trans "Ne plus suivre ce sujet" %}
                     {% endif %}
                 "
             >
-                {% if has_subscribed_new %}
+                {% if has_subscribed_answer %}
                     {% trans "Ne plus suivre ce sujet" %}
                 {% else %}
                     {% trans "Suivre ce sujet" %}
@@ -203,25 +203,25 @@
     </li>
     <li>
         <form action="{% url 'follow-topic-edit' %}" method="post">
-        {% with has_subscribed_new=topic|has_suscribed_email_new %}
+        {% with has_subscribed_answer=topic|has_suscribed_email_answer_topic %}
             <input type="hidden" name="topic" value="{{ topic.pk }}">
             <input type="hidden" name="nb" value="{{ nb }}">
             <input type="hidden" name="page" value="{{ nb }}">
-            <input type="hidden" name="email" value="{% if has_subscribed_new %}-1{% else %}1{% endif %}">
+            <input type="hidden" name="email" value="{% if has_subscribed_answer %}-1{% else %}1{% endif %}">
             {% csrf_token %}
 
             <button
-                class="email ico-after {% if not has_subscribed_new %}blue{% endif %}"
+                class="email ico-after {% if not has_subscribed_answer %}blue{% endif %}"
                 type="submit" data-ajax-input="follow-topic-by-email"
                 data-content-on-click="
-                    {% if has_subscribed_new %}
+                    {% if has_subscribed_answer %}
                         {% trans "Être notifié par courriel" %}
                     {% else %}
                         {% trans "Ne plus être notifié par courriel" %}
                     {% endif %}
                 "
             >
-                {% if has_subscribed_new %}
+                {% if has_subscribed_answer %}
                     {% trans "Ne plus être notifié par courriel" %}
                 {% else %}
                     {% trans "Être notifié par courriel" %}
