--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -173,62 +173,60 @@
     {% endif %}
 
     <li>
+    {% with subscribe_array=topic|has_subscribed_answer_topic %}
         <form action="{% url 'follow-topic-edit' %}" method="post">
-        {% with has_subscribed_answer=topic|has_subscribed_answer_topic %}
             <input type="hidden" name="topic" value="{{ topic.pk }}">
             <input type="hidden" name="nb" value="{{ nb }}">
             <input type="hidden" name="page" value="{{ nb }}">
-            <input type="hidden" name="follow" value="{% if has_subscribed_answer %}-1{% else %}1{% endif %}">
+            <input type="hidden" name="follow" value="{% if subscribe_array.has_subscribed_answer %}-1{% else %}1{% endif %}">
             {% csrf_token %}
 
             <button
-                class="follow ico-after star {% if has_subscribed_answer %}yellow{% else %}blue{% endif %}"
+                class="follow ico-after star {% if subscribe_array.has_subscribed_answer %}yellow{% else %}blue{% endif %}"
                 type="submit" data-ajax-input="follow-topic"
                 data-content-on-click="
-                    {% if has_subscribed_answer %}
+                    {% if subscribe_array.has_subscribed_answer %}
                         {% trans "Suivre ce sujet" %}
                     {% else %}
                         {% trans "Ne plus suivre ce sujet" %}
                     {% endif %}
                 "
             >
-                {% if has_subscribed_answer %}
+                {% if subscribe_array.has_subscribed_answer %}
                     {% trans "Ne plus suivre ce sujet" %}
                 {% else %}
                     {% trans "Suivre ce sujet" %}
                 {% endif %}
             </button>
-        {% endwith %}
         </form>
     </li>
     <li>
         <form action="{% url 'follow-topic-edit' %}" method="post">
-        {% with has_subscribed_answer=topic|has_suscribed_email_answer_topic %}
             <input type="hidden" name="topic" value="{{ topic.pk }}">
             <input type="hidden" name="nb" value="{{ nb }}">
             <input type="hidden" name="page" value="{{ nb }}">
-            <input type="hidden" name="email" value="{% if has_subscribed_answer %}-1{% else %}1{% endif %}">
+            <input type="hidden" name="email" value="{% if subscribe_array.has_subscribed_answer_email %}-1{% else %}1{% endif %}">
             {% csrf_token %}
 
             <button
-                class="email ico-after {% if not has_subscribed_answer %}blue{% endif %}"
+                class="email ico-after {% if not subscribe_array.has_subscribed_answer_email %}blue{% endif %}"
                 type="submit" data-ajax-input="follow-topic-by-email"
                 data-content-on-click="
-                    {% if has_subscribed_answer %}
+                    {% if subscribe_array.has_subscribed_answer_email %}
                         {% trans "Être notifié par courriel" %}
                     {% else %}
                         {% trans "Ne plus être notifié par courriel" %}
                     {% endif %}
                 "
             >
-                {% if has_subscribed_answer %}
+                {% if subscribe_array.has_subscribed_answer_email %}
                     {% trans "Ne plus être notifié par courriel" %}
                 {% else %}
                     {% trans "Être notifié par courriel" %}
                 {% endif %}
             </button>
-        {% endwith %}
         </form>
+    {% endwith %}
     </li>
 {% endblock %}
 
